troquei links internos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
 
         <main class="content">
-            <div class="main">
+            <div id="main">
                     <div class="description">
                         <h3>Sobre mim</h3>
                         <p><em>
@@ -41,7 +41,7 @@
                     <div class="skills">
                         <h3>Soft Skills</h3>
                         
-                        <ul>
+                        <ul id="ul">
                             <li>Sou criativo</li>
                             <li>Dedicado</li>
                             <li>Focado</li>
@@ -56,7 +56,7 @@
 
         </main>
         <footer>
-            <div class="footer">
+            <div id="footer">
                 <h3>Tenho familiaridade com:</h3>
                 <div class="hard-skills">
                     <img src="./img/javascript.svg" alt="imagem da linguagem javascript">
