retirei a tag em

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             </div> 
 
             <div class="navigator">
-                <a href="#main">Sobre mim |</a>
-                <a href="#ul">Skills |</a>
-                <a href="#footer">Habilidades |</a>
-                <a href="https://devnaestrada.com.br/">Site favorito</a>
+                <nav>
+                    <a href="#main">Sobre mim |</a>
+                    <a href="#ul">Skills |</a>
+                    <a href="#footer">Habilidades |</a>
+                    <a href="https://devnaestrada.com.br/">Site favorito</a>
+                </nav>
             </div>
            
         </header>
