corrigi um pequeno erro no paragrafo

--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
             <div id="main">
                     <div class="description">
                         <h3>Sobre mim</h3>
-                        <p><
+                        <p>
                             Tenho 19 anos, sou da cidade de Caruaru, que fica em Pernambuco.
                             Sou brasileiro nato, apaixonado por desenvolvimento de software.
                         </p>
-                        <br>
                     </div>
                     <div class="skills">
                         <h3>Soft Skills</h3>
@@ -57,7 +56,7 @@
         </main>
         <footer>
             <div id="footer">
-                <h3>Tenho familiaridade com:</h3>
+                <h3>Habilidades</h3>
                 <div class="hard-skills">
                     <img src="./img/javascript.svg" alt="imagem da linguagem javascript">
                     <img src="./img/html5.svg" alt="imagem do html5">
